syntax = "proto3";

// MLModelScope
//
// MLModelScope is a hardware/software agnostic platform
// to facilitate the evaluation, measurement, and introspection
// of ML models within AI pipelines. MLModelScope aids application
// developers in discovering and experimenting with models, data
// scientists developers in replicating and evaluating for publishing
// models, and system architects in understanding the performance of AI
// workloads.

package mlmodelscope.org.dlframework;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;
option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option go_package = "dlframework";

enum FeatureType {
  UNKNOWN = 0;
  IMAGE = 1;
  CLASSIFICATION = 2;
  BOUNDINGBOX = 3;
  SEMANTICSEGMENT = 4;
  INSTANCESEGMENT = 5;
  GEOLOCATION = 6;
  REGION = 7;
  TEXT = 8;
  AUDIO = 9;

  RAW = 100;
}

// message Pixel {
//   option (gogoproto.description) = true;
//   int32 index = 1 [ (gogoproto.moretags) = "yaml:\"index,omitempty\"" ];
//   string label = 2 [ (gogoproto.moretags) = "yaml:\"label,omitempty\"" ];
//   int32 value = 3 [ (gogoproto.moretags) = "yaml:\"value,omitempty\"" ];
// }

message Image {
  // An id used to identify the output feature: maps to input_id for output
  string id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag) = "id,omitempty",
    (gogoproto.moretags) = "yaml:\"id,omitempty\""
  ];
  // The image is base64 encoded
  bytes data = 2 [ (gogoproto.moretags) = "yaml:\"data,omitempty\"" ];
  // Preprocessed is set to true to disable preprocessing.
  // If enabled then the image is assumed to be rescaled and
  // encoded as an array of float32 values
  // comment out for now
  // bool preprocessed = 3
  //     [ (gogoproto.moretags) = "yaml:\"preprocessed,omitempty\"" ];
}

message Classification {
  option (gogoproto.description) = true;
  int32 index = 1 [ (gogoproto.moretags) = "yaml:\"index,omitempty\"" ];
  string label = 2 [ (gogoproto.moretags) = "yaml:\"label,omitempty\"" ];
}

message BoundingBox {
  option (gogoproto.description) = true;
  int32 index = 1 [ (gogoproto.moretags) = "yaml:\"index,omitempty\"" ];
  string label = 2 [ (gogoproto.moretags) = "yaml:\"label,omitempty\"" ];
  float xmin = 3 [ (gogoproto.moretags) = "yaml:\"xmin,omitempty\"" ];
  float xmax = 4 [ (gogoproto.moretags) = "yaml:\"xmax,omitempty\"" ];
  float ymin = 5 [ (gogoproto.moretags) = "yaml:\"ymin,omitempty\"" ];
  float ymax = 6 [ (gogoproto.moretags) = "yaml:\"ymax,omitempty\"" ];
}

message SemanticSegment {
  option (gogoproto.description) = true;
  int32 height = 1 [ (gogoproto.moretags) = "yaml:\"height,omitempty\"" ];
  int32 width = 2 [ (gogoproto.moretags) = "yaml:\"width,omitempty\"" ];
  repeated int32 int_mask = 3
      [ packed = true, (gogoproto.moretags) = "yaml:\"int_mask,omitempty\"" ];
}

message InstanceSegment {
  option (gogoproto.description) = true;
  int32 index = 1 [ (gogoproto.moretags) = "yaml:\"index,omitempty\"" ];
  string label = 2 [ (gogoproto.moretags) = "yaml:\"label,omitempty\"" ];
  float xmin = 3 [ (gogoproto.moretags) = "yaml:\"xmin,omitempty\"" ];
  float xmax = 4 [ (gogoproto.moretags) = "yaml:\"xmax,omitempty\"" ];
  float ymin = 5 [ (gogoproto.moretags) = "yaml:\"ymin,omitempty\"" ];
  float ymax = 6 [ (gogoproto.moretags) = "yaml:\"ymax,omitempty\"" ];
  string mask_type = 7
      [ (gogoproto.moretags) = "yaml:\"mask_type,omitempty\"" ];
  int32 height = 8 [ (gogoproto.moretags) = "yaml:\"height,omitempty\"" ];
  int32 width = 9 [ (gogoproto.moretags) = "yaml:\"width,omitempty\"" ];
  repeated int32 int_mask = 10
      [ packed = true, (gogoproto.moretags) = "yaml:\"int_mask,omitempty\"" ];
  repeated float float_mask = 11
      [ packed = true, (gogoproto.moretags) = "yaml:\"float_mask,omitempty\"" ];
}

message GeoLocation {
  option (gogoproto.description) = true;
  int32 index = 1 [ (gogoproto.moretags) = "yaml:\"index,omitempty\"" ];
  float latitude = 2 [ (gogoproto.moretags) = "yaml:\"latitude,omitempty\"" ];
  float longitude = 3 [ (gogoproto.moretags) = "yaml:\"longitude,omitempty\"" ];
}

message Region {
  option (gogoproto.description) = true;
  bytes data = 1 [ (gogoproto.moretags) = "yaml:\"data,omitempty\"" ];
  string format = 2 [ (gogoproto.moretags) = "yaml:\"format,omitempty\"" ];
}

message Text {
  option (gogoproto.description) = true;
  bytes data = 2 [ (gogoproto.moretags) = "yaml:\"data,omitempty\"" ];
}

message Audio {
  option (gogoproto.description) = true;
  bytes data = 1 [ (gogoproto.moretags) = "yaml:\"data,omitempty\"" ];
  string format = 2 [ (gogoproto.moretags) = "yaml:\"format,omitempty\"" ];
}

message Raw {
  option (gogoproto.description) = true;
  bytes data = 1 [ (gogoproto.moretags) = "yaml:\"data,omitempty\"" ];
  string format = 2 [ (gogoproto.moretags) = "yaml:\"format,omitempty\"" ];
}

message Feature {
  option (gogoproto.description) = true;
  string id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag) = "id,omitempty",
    (gogoproto.moretags) = "yaml:\"id,omitempty\""
  ];
  FeatureType type = 3 [ (gogoproto.moretags) = "yaml:\"type,omitempty\"" ];
  float probability = 4
      [ (gogoproto.moretags) = "yaml:\"probability,omitempty\"" ];
  map<string, string> metadata = 5
      [ (gogoproto.moretags) = "yaml:\"metadata,omitempty\"" ];
  oneof feature {
    Image image = 6 [ (gogoproto.moretags) = "yaml:\"image,omitempty\"" ];
    Classification classification = 7
        [ (gogoproto.moretags) = "yaml:\"classification,omitempty\"" ];
    BoundingBox bounding_box = 8
        [ (gogoproto.moretags) = "yaml:\"boundingbox,omitempty\"" ];
    SemanticSegment semantic_segment = 9
        [ (gogoproto.moretags) = "yaml:\"semantic_segment,omitempty\"" ];
    InstanceSegment instance_segment = 10
        [ (gogoproto.moretags) = "yaml:\"instancesegment,omitempty\"" ];
    Text text = 11 [ (gogoproto.moretags) = "yaml:\"text,omitempty\"" ];
    Region region = 12 [ (gogoproto.moretags) = "yaml:\"region,omitempty\"" ];
    Audio audio = 13 [ (gogoproto.moretags) = "yaml:\"audio,omitempty\"" ];
    GeoLocation geolocation = 14
        [ (gogoproto.moretags) = "yaml:\"geolocation,omitempty\"" ];
    Raw raw = 1000 [ (gogoproto.moretags) = "yaml:\"raw,omitempty\"" ];
  }
}
